# scipy-2024-anywidget

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml
notebooks/: 01-intro.ipynb  02-basics.ipynb  03-ipymario.ipynb  clipboard.ipynb  detector.ipynb  index.ipynb  notifier.ipynb
notebooks/04-demos/: clipboard.ipynb  detector.ipynb  notifier.ipynb  notifier.js
notebooks/answers/: 02-01.py  02-02.py  02-03.py  02-04.py  02-05.py  02-06.py  02-07.py  02-08.py  02-09.py  03-01.py  03-02.py  03-03.py  03-04.py  03-05.js  03-06.js  03-07.css  03-07.js
notebooks/demos/: clipboard.js  detector.js
notebooks/playground/: clipboard.ipynb  detector.ipynb  drawdata.ipynb  notifier.ipynb  notifier.js
src/scipy_2024_anywidget/: __init__.py  detector.js  widgets.py
