[project]
name = "scipy-2024-anywidget"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }
]
dependencies = [
    "jupyterlab>=4.2.2",
    "anywidget[dev]>=0.9.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab-vim>=4.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scipy_2024_anywidget"]
